# copy-rtype

./: CONTEXT.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  poyo.txt  test.txt
.github/workflows/: compil.yml
NetCommon/include/: net.h  net_client.h  net_common.h  net_message.h  net_server.h
client/: CMakeLists.txt  vcpkg.json
client/src/: main.cpp
ecs/: Camera.cpp  Camera.hpp  Entity.hpp  IndexedZipper.hpp  IndexedZipperIterator.hpp  Registry.hpp  SparseArray.hpp  Zipper.hpp  ZipperIterator.hpp
ecs/components/: ColliderBox.hpp  Components.hpp  Damage.hpp  Input.hpp  Mortal.hpp  Obstacle.hpp  RigidBody.hpp  Sprite.hpp  Transform.hpp
ecs/events/: CameraConfig.hpp  Collision.hpp  Event.cpp  Event.hpp  Events.hpp
ecs/helpers/: Helpers.hpp  Rect.hpp  Vec2.hpp  keyboard_input.hpp  sfml_bouding_box.hpp  sfml_bounding_box.cpp  sfml_dict.cpp  sfml_dict.hpp
ecs/managers/: ComponentManager.hpp  EntityManager.hpp  EventManager.hpp  Managers.hpp  ResourceManager.hpp  SystemManager.hpp
ecs/prefabs/: Player.cpp  Player.hpp  Prefabs.hpp
ecs/systems/: Systems.hpp  collision_system.cpp  debug_system.cpp  draw_system.cpp  input_system.cpp  kill_system.cpp  movement_system.cpp  physics_system.cpp
server/: CMakeLists.txt  CMakePresets.json  vcpkg.json
server/include/: main.hpp
server/src/: main.cpp
